--- a/src/app/pages/upper-intermediate/test-upper/test-upper.page.html
+++ b/src/app/pages/upper-intermediate/test-upper/test-upper.page.html
@@ -2,9 +2,9 @@
     <ion-header translucent>
         <ion-toolbar>
             <ion-buttons slot="start">
-                <ion-back-button defaultHref="intermediate"></ion-back-button>
+                <ion-back-button defaultHref="upper-intermediate"></ion-back-button>
             </ion-buttons>
-            <ion-title>Tests intermediate</ion-title>
+            <ion-title>Tests Upper-intermediate</ion-title>
         </ion-toolbar>
     </ion-header>
 
@@ -12,40 +12,38 @@
 
         <ion-card routerLink="/teste5">
             <ion-card-header>
-                <ion-card-title>Practise test 5</ion-card-title>
+                <ion-card-title>Practise test 7</ion-card-title>
             </ion-card-header>
 
         </ion-card>
         <ion-card routerLink="/teste6">
             <ion-card-header>
-                <ion-card-title>Practise test 6</ion-card-title>
+                <ion-card-title>Practise test 8</ion-card-title>
             </ion-card-header>
 
         </ion-card>
-        <ion-card routerLink="/testslis-intermediate">
+        <ion-card routerLink="/test-listening5">
             <ion-card-header>
-                <ion-card-title>Listening test 5</ion-card-title>
+                <ion-card-title>Listening test 7</ion-card-title>
             </ion-card-header>
 
         </ion-card>
-        <ion-card routerLink="/testslis-intermediate">
+        <ion-card routerLink="/test-listening6">
             <ion-card-header>
-                <ion-card-title>Listening test 6</ion-card-title>
+                <ion-card-title>Listening test 8</ion-card-title>
             </ion-card-header>
 
         </ion-card>
-
         <ion-card routerLink="/testvoc5">
             <ion-card-header>
-                <ion-card-title>Vocabulary test 5</ion-card-title>
+                <ion-card-title>Vocabulary test 7</ion-card-title>
             </ion-card-header>
 
         </ion-card>
         <ion-card routerLink="/testvoc6">
             <ion-card-header>
-                <ion-card-title>Vocabulary test 6</ion-card-title>
+                <ion-card-title>Vocabulary test 8</ion-card-title>
             </ion-card-header>
-
         </ion-card>
 
     </ion-content>
